fixed spacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,22 +9,19 @@
 @-ms-viewport {
   width: device-width; }
 body {
-  -ms-overflow-style: scrollbar;
-}
+  -ms-overflow-style: scrollbar; }
 
 @media screen and (max-width: 480px) {
   html, body {
     min-width: 320px; } }
 html {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 *, *:before, *:after {
   box-sizing: inherit; }
 
 body {
-  background: #ffffff;
-}
+  background: #ffffff; }
   body.is-preload *, body.is-preload *:before, body.is-preload *:after {
     -moz-animation: none !important;
     -webkit-animation: none !important;
